style.css
/*======for toggle switch button =====*/
.switch {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
}

.switch input { 
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: .4s;
  transition: .4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: .4s;
  transition: .4s;
}

input:checked + .slider {
  background-color: #2196F3;
}

input:focus + .slider {
  box-shadow: 0 0 1px #2196F3;
}

input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

/* Rounded sliders */
.slider.round {
    border-radius: 34px;
  }
  
  .slider.round:before {
    border-radius: 50%;
}
/*========================*/
.hiitify_title {
    color: white;
}

#wi_length {
    text-align:center;
}
#wi_bpm{
    text-align:center;
}
#ri_length{
    text-align:center;
}
#ri_bpm{
    text-align:center;
}
#tw_length{
    text-align:center;
}

#interval_time_remaining{
    font-size: 200px; 
    height: 200px;
    line-height: 200px;
}
#total_time_remaining{
    padding: 10px;
    font-size: 25px; 
    height: 25px;
    line-height: 25px;
}
#chooseWorkoutDiv{
    min-width: 300px;
    box-shadow: 0 4px 8px 0 rgba(216, 213, 213, 0.192), 0 6px 20px 0 rgba(216, 213, 213, 0.445);

    /* used to help stretch speed slider to full width */
    display: flex;
    flex-direction: column;
    align-items: stretch; 
}

